--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.6
 version = '1.3.17-hashed-passwords'
+archiveName = "jcifs-" + version + ".jar"
 
 repositories {
     mavenCentral()
@@ -12,12 +13,18 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.7'
     compile 'org.slf4j:slf4j-jdk14:1.7.7'
-    compile 'javax.servlet:servlet-api:2.5'
+}
+
+task removeJar << {
+	delete archiveName
+}
+
+clean {
+    it.dependsOn removeJar
 }
 
 jar {
     destinationDir = new File(".")
-    archiveName = "jcifs-" + version + ".jar"
     manifest {
         attributes("Implementation-Title": "JCIFS hashed password fork", "Implementation-Version": version)
     }
