--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.samba.jcifs</groupId>
   <artifactId>jcifs</artifactId>
-  <version>1.3.17</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-  </build>
+  <version>1.3.17-hashed-passwords</version>
+  <properties>
+      <slf4j.version>1.7.7</slf4j.version>
+  </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	   	        <artifactId>maven-jar-plugin</artifactId>
+	            <configuration>
+	                <archive>
+	                    <manifestEntries>
+	                        <Implementation-Title>JCIFS hashed password fork</Implementation-Title>
+	                        <Implementation-Version>${project.version}</Implementation-Version>
+	                    </manifestEntries>
+	                </archive>
+	            </configuration>
+            </plugin>
+        </plugins>
+    </build>
+  
   <dependencies>
-  	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>servlet-api</artifactId>
-  		<version>2.5</version>
-  		<scope>provided</scope>
-  	</dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-jdk14</artifactId>
+          <version>${slf4j.version}</version>
+      </dependency>
   </dependencies>
 </project>
